2000-07-04  Ulrich Drepper  <drepper@redhat.com>

	* spinlock.c (__pthread_unlock): Properly place write barrier.
	Patch by Kaz Kylheku <kaz@ashi.footprints.net>.

2000-07-03  Ulrich Drepper  <drepper@redhat.com>

	* spinlock.c: Replace fast spinlocks by adaptive spinlocks which are
	faster on SMP systems.  No more emulation of compare&swap for adaptive
	spinlocks.
	* spinlock.h: Likewise.
	* sysdeps/pthread/pthread.h: Shuffle PTHREAD_MUTEX_* values around.
	Replace fast with adaptive mutex.
	* mutex.c: Rewrite for replacement of fast by adaptive mutex.
	* condvar.c: Likewise.
	* pthread.c: Define and initialize __pthread_smp_kernel variable.
	* internals.h: Declare __pthread_smp_kernel.
	* sysdeps/pthread/bits/pthreadtypes.h: Update comment of
	_pthread_fastlock structure.
	Patch by Kaz Kylheku <kaz@ashi.footprints.net>.

	* pthread.c: Remove initialization to zero from global variables.

2000-06-29  Jakub Jelinek  <jakub@redhat.com>

	* shlib-versions: Make sparc64 GLIBC_2.2+ only.

2000-06-28  Greg McGary  <greg@mcgary.org>

	* weaks.c: Wrap BP_SYM () around weak extern declarations of
	pthread functions that have pointers in their return+arg signatures.

2000-06-27  Greg McGary  <greg@mcgary.org>

	* sysdeps/pthread/bits/libc-lock.h: Wrap BP_SYM () around weak
	extern declarations of pthread functions that have pointers in
	their return+arg signatures.

2000-06-26  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add ex11.  Add rules to build it.
	* Examples/ex11.c: New file.
	* rwlock.c: Fix complete braindamaged previous try to implement
	timedout functions.

	* spinlock.c: Pretty print.

2000-06-25  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add ex10.  Add rules to build it.
	* Versions [GLIBC_2.2] (libpthread): Add pthread_mutex_timedlock,
	pthread_rwlock_timedrdlock, and pthread_rwlock_timedwrlock.
	* condvar.c (pthread_cond_wait): Allow mutex of kind
	PTHREAD_MUTEX_TIMED_NP.
	(pthread_cond_timedwait_relative): Likewise.